- feat: Added ModSharp as standalone addon with .NET 9 runtime auto-installation
- feat: Migrated to SwiftlyS2 v2 (standalone, no MetaMod dependency)
- feat: Smart Docker image cleanup in build script (only removes replaced images)
- feat: Centralized gameinfo.gi management preserving all configured addons
- feat: MetaMod load order enforcement (always first after LowViolence)
- feat: Added ALLOW_TOKENLESS hidden variable for RequireLoginForDedicatedServers patching
- refactor: Code restructure with centralized updater functions (~320 lines eliminated)
- refactor: Standardized logging and version management across all updaters
- upgrade: Enhanced addon selection with descriptive standalone options
- upgrade: All scripts now read-only (555 permissions) for security
- upgrade: MetaMod auto-enabled with warning when CSS is selected
- remove: Obsolete per-addon AUTOUPDATE variables and old Swiftly v1 option
- remove: ADDON_SELECTION dropdown (deprecated, backwards compatible until next patch)
- fix: Version file operations and duplicate migration messages
- fix: Multiple addons now coexist properly in gameinfo.gi SearchPaths
- fix: VPK sync now excludes gameinfo.gi to preserve addon configurations

-- update - 2025.11.07

- feat: Introduced organized /egg/ directory structure for all egg-related files
- feat: Implemented FTP-editable JSON configuration system with 5 config files
- feat: Added config version migration system with automatic backup and smart merge
- feat: Replaced environment variables with JSON configs for auto-restart, webhook, filter, cleanup, and logging
- feat: Implemented API-based version checking via api.steamcmd.net (non-blocking, fast)
- feat: Added Pterodactyl API integration for automatic server restart
- feat: Introduced daily log rotation with triple limits (size, count, age)
- feat: Created automatic legacy file migration system (update_helper.sh)